Convert PublicVirtualIP to new port creation method
This change brings PublicVirtualIP in line with the rest of the
VIPs in how it is created. This allows the network where
PublicVirtualIP is instantiated to be on cltplane when network
isolation is not used, and on the external network when network
isolation is used. This change removes the PublicVirtualNetwork
parameter, since it is no longer used. In order to continue to
support the PublicVirtualFixedIPs parameter, which is used to
provide a specific IP for the PublicVirtualIP, the FixedIP
parameter was added to cltplane_vip.yaml, vip.yaml, and
noop.yaml. The value of PublicVirtualIP is passed to FixedIP
in the VIP templates. This change also moves the default
network for keystone public api to the external net (which will
fallback to ctlplane if network isolation isn't used).

Change-Id: I3f5d35cbe55d3a148e95cf49dfbaad4874df960b

--- a/network/ports/ctlplane_vip.yaml
+++ b/network/ports/ctlplane_vip.yaml
@@ -2,6 +2,7 @@ heat_template_version: 2015-04-30
 
 description: >
   Creates a port for a VIP on the undercloud ctlplane network.
+  The IP address will be chosen automatically if FixedIPs is empty.
 
 parameters:
   NetworkName:
@@ -19,15 +20,20 @@ parameters:
     description: The name of the undercloud Neutron control plane
     default: ctlplane
     type: string
-
+  FixedIPs:
+    description: >
+        Control the IP allocation for the VIP port. E.g.
+        [{'ip_address':'1.2.3.4'}]
+    default: []
+    type: json
 
 resources:
-
   VipPort:
     type: OS::Neutron::Port
     properties:
       network: {get_param: ControlPlaneNetwork}
       name: {get_param: PortName}
+      fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
 
 outputs:
@@ -36,7 +42,7 @@ outputs:
     value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
-    description: IP/Subnet CIDR for the internal API network IP
+    description: IP/Subnet CIDR for the ctlplane network.
     value:
           list_join:
             - ''
