--- a/network/ports/external.yaml
+++ b/network/ports/external.yaml
@@ -1,7 +1,8 @@
 heat_template_version: 2015-04-30
 
 description: >
-  Creates a port on the external network.
+  Creates a port on the external network. The IP address will be chosen
+  automatically if FixedIPs is empty.
 
 parameters:
   ExternalNetName:
@@ -15,6 +16,16 @@ parameters:
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     type: string
+  ControlPlaneNetwork: # Here for compatibility with ctlplane_vip.yaml
+    description: The name of the undercloud Neutron control plane
+    default: ctlplane
+    type: string
+  FixedIPs:
+    description: >
+        Control the IP allocation for the VIP port. E.g.
+        [{'ip_address':'1.2.3.4'}]
+    default: []
+    type: json
 
 resources:
 
@@ -23,6 +34,7 @@ resources:
     properties:
       network: {get_param: ExternalNetName}
       name: {get_param: PortName}
+      fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
 
 outputs:
