--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -19,6 +19,10 @@ parameters:
     description: # Here for compatability with vip.yaml
     default: ''
     type: string
+  FixedIPs:
+    description: # Here for compatibility with vip.yaml
+    default: []
+    type: json
   ControlPlaneSubnetCidr: # Override this via parameter_defaults
     default: '24'
     description: The subnet CIDR of the control plane network.
