Add ControlPlaneNetwork to vip.yaml
There are two files in network/ports which control the VIP
behavior called ctlplane_vip.yaml and vip.yaml. One of these
files was missing ControlPlaneNetwork, since it wasn't used
inside the template. Unfortunately, tuskar chokes on this,
even though Heat can build the stack just fine. This change
makes the vip.yaml and ctlplane_vip.yaml equivalent by adding
ControlPlaneNetwork to the vip.yaml template.

Change-Id: Ic20281e58a1130afe18d5aec505a3df199841fd5

--- a/network/ports/vip.yaml
+++ b/network/ports/vip.yaml
@@ -15,6 +15,10 @@ parameters:
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     type: string
+  ControlPlaneNetwork:
+    description: The name of the undercloud Neutron control plane
+    default: ctlplane
+    type: string
 
 resources:
 
