Add a default route to the external isolated network
This change adds a parameter for ExternalInterfaceDefaultRoute
and uses that parameter to set the default route on the controller
nodes. This allows Horizon and the public APIs to be reachable from
routed networks outside the overcloud.

Co-Authored-By: Dan Prince <dprince@redhat.com>

Change-Id: I67a72767342237049f53f5085a6faf891fbf0c30

--- a/network/config/bond-with-vlans/controller.yaml
+++ b/network/config/bond-with-vlans/controller.yaml
@@ -50,6 +50,10 @@ parameters:
     default: 50
     description: Vlan ID for the tenant network traffic.
     type: number
+  ExternalInterfaceDefaultRoute:
+    default: '10.0.0.1'
+    description: default route for the external network
+    type: string
 
 resources:
   OsNetConfigImpl:
@@ -61,11 +65,11 @@ resources:
           network_config:
             -
               type: ovs_bridge
-              name: br-bond
+              name: {get_input: bridge_name}
               members:
                 -
                   type: ovs_bond
-                  name: {get_input: bridge_name}
+                  name: bond1
                   ovs_options: {get_param: BondInterfaceOvsOptions}
                   members:
                     -
@@ -80,8 +84,12 @@ resources:
                   device: bond1
                   vlan_id: {get_param: ExternalNetworkVlanID}
                   addresses:
-                  -
-                    ip_netmask: {get_param: ExternalIpSubnet}
+                    -
+                      ip_netmask: {get_param: ExternalIpSubnet}
+                  routes:
+                    -
+                      ip_netmask: 0.0.0.0/0
+                      next_hop: {get_param: ExternalInterfaceDefaultRoute}
                 -
                   type: vlan
                   device: bond1
