Support for using external Ceph clusters
This patch adds support for using an externally managed Ceph
cluster with the TripleO Heat templates.

For an externally managed Ceph cluster we initially
only deploy the Ceph client tools, install the 'openstack' user
keyring, and generate the ceph.conf. This matches what we do
for managed Ceph installations and is a good first start.
No other Ceph related services are installed or managed.

To enable use of a Ceph external cluster simply add
the custom Heat environment file environments/puppet-ceph-external.yaml
to your heat stack create/update command and make sure to
set the required CephClientKey, CephExternalMonHost, and CephClusterFSID
variables.

Change-Id: I0a8b213ce9dfa2fc4e62ae1e7631466e5179fc2b

--- a/ceph-cluster-config.yaml
+++ b/ceph-cluster-config.yaml
@@ -2,6 +2,18 @@ heat_template_version: 2015-04-30
 description: 'Ceph Cluster config data'
 
 parameters:
+  ceph_storage_count:
+    default: 0
+    type: number
+    description: Number of Ceph storage nodes. Used to enable/disable managed Ceph installation.
+  ceph_external_mon_ips:
+    default: ''
+    type: string
+    description: List of external Ceph Mon host IPs.
+  ceph_client_key:
+    default: ''
+    type: string
+    description: Ceph key used to create the 'openstack' user keyring.
   ceph_fsid:
     default: ''
     type: string
