Map NovaEnableRbdBackend to ephemeral_storage from nova::compute::rbd
This maps the template param to the actual class param which optionally
configures Ceph as a backend for the ephemeral storage or for the
persistent storage only. See I4ae0fd605c5a57aa23bea83b06530a50844d24a0

Change-Id: Ic7007da8317e98d450b1362864e65093a184cb25

--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -351,7 +351,7 @@ resources:
                 nova::compute::libvirt::libvirt_virt_type: {get_input: nova_compute_libvirt_type}
                 nova_api_host: {get_input: nova_api_host}
                 nova::compute::vncproxy_host: {get_input: nova_public_ip}
-                nova_enable_rbd_backend: {get_input: nova_enable_rbd_backend}
+                nova::compute::rbd::ephemeral_storage: {get_input: nova_enable_rbd_backend}
                 nova_password: {get_input: nova_password}
                 nova::compute::vncserver_proxyclient_address: {get_input: nova_vnc_proxyclient_address}
                 ceilometer::debug: {get_input: debug}
