Add services to ServiceNetMap to select hostnames resolution network
The *HostnameResolveNetwork services define the network against
which the hostnames in /etc/hosts should be resolved, defaults
to 'internal_api' for all except CephStorage for which it uses
'storage' as they do not have connectivity to 'internal_api'.

Closes-Bug: 1471179
Change-Id: Ia8971f8a63016966236e7975ac2d97921a314255

--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -76,6 +76,12 @@ resources:
       StorageIpSubnet: {get_attr: [StoragePort, ip_subnet]}
       StorageMgmtIpSubnet: {get_attr: [StorageMgmtPort, ip_subnet]}
 
+  NetIpMap:
+    type: OS::TripleO::Network::Ports::NetIpMap
+    properties:
+      StorageIp: {get_attr: [StoragePort, ip_address]}
+      StorageMgmtIp: {get_attr: [StorageMgmtPort, ip_address]}
+
   NetIpSubnetMap:
     type: OS::TripleO::Network::Ports::NetIpMap
     properties:
@@ -145,7 +151,7 @@ outputs:
       str_replace:
         template: "IP HOST.localdomain HOST"
         params:
-          IP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+          IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CephStorageHostnameResolveNetwork]}]}
           HOST: {get_attr: [CephStorage, name]}
   nova_server_resource:
     description: Heat resource handle for the ceph storage server
@@ -160,4 +166,3 @@ outputs:
   config_identifier:
     description: identifier which changes if the node configuration may need re-applying
     value: {get_attr: [CephStorageDeployment, deploy_stdout]}
-
