--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -510,7 +510,7 @@ outputs:
       str_replace:
         template: "IP HOST.localdomain HOST"
         params:
-          IP: {get_attr: [NovaCompute, networks, ctlplane, 0]}
+          IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ComputeHostnameResolveNetwork]}]}
           HOST: {get_attr: [NovaCompute, name]}
   nova_server_resource:
     description: Heat resource handle for the Nova compute server
@@ -519,4 +519,3 @@ outputs:
   config_identifier:
     description: identifier which changes if the node configuration may need re-applying
     value: {get_attr: [NovaComputeDeployment, deploy_stdout]}
-
