--- a/puppet/swift-storage-puppet.yaml
+++ b/puppet/swift-storage-puppet.yaml
@@ -194,7 +194,7 @@ outputs:
       str_replace:
         template: "IP HOST.localdomain HOST"
         params:
-          IP: {get_attr: [SwiftStorage, networks, ctlplane, 0]}
+          IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ObjectStorageHostnameResolveNetwork]}]}
           HOST: {get_attr: [SwiftStorage, name]}
   nova_server_resource:
     description: Heat resource handle for the swift storage server
@@ -219,4 +219,3 @@ outputs:
   config_identifier:
     description: identifier which changes if the node configuration may need re-applying
     value: {get_attr: [SwiftStorageHieraDeploy, deploy_stdout]}
-
