Adds the NeutronTunnelIdRanges and NeutronVniRanges parameters
This adds the NeutronTunnelIdRanges and NeutronVniRanges parameters
which govern the GRE or VXLAN tunnel IDs (respectively) that are to
be made available for overcloud tenant networks.

These both default to "1:1000," to retain the current behaviour.
They are propagated to the hiera data for puppet deploys and there
is a separate change to support passing these into the config via
the neutron tripleo-image-element at

https://review.openstack.org/#/c/199592/

Change-Id: I967a8cae218a31e888abc438e9de5756ae627adb
Related-Bug: https://bugzilla.redhat.com/show_bug.cgi?id=1240631

--- a/controller.yaml
+++ b/controller.yaml
@@ -360,6 +360,18 @@ parameters:
         The tunnel types for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'gre,vxlan'
     type: string
+  NeutronTunnelIdRanges:
+    description: |
+        Comma-separated list of <tun_min>:<tun_max> tuples enumerating ranges
+        of GRE tunnel IDs that are available for tenant network allocation
+    default: ["1:1000", ]
+    type: comma_delimited_list
+  NeutronVniRanges:
+    description: |
+        Comma-separated list of <vni_min>:<vni_max> tuples enumerating ranges
+        of VXLAN VNI IDs that are available for tenant network allocation
+    default: ["1:1000", ]
+    type: comma_delimited_list
   NovaPassword:
     default: unset
     description: The password for the nova service and db account, used by nova-api.
@@ -653,6 +665,8 @@ resources:
             physical_bridge: br-ex
             tenant_network_type: {get_input: neutron_tenant_network_type}
             tunnel_types: {get_input: neutron_tunnel_types}
+            tunnel_id_ranges: {get_input: neutron_tunnel_id_ranges}
+            vni_ranges: {get_input: neutron_vni_ranges}
           ovs_db: {get_input: neutron_dsn}
           service-password: {get_input: neutron_password}
           dnsmasq-options: {get_input: neutron_dnsmasq_options}
@@ -891,6 +905,22 @@ resources:
         neutron_public_interface_tag: {get_param: NeutronPublicInterfaceTag}
         neutron_tenant_network_type: {get_param: NeutronNetworkType}
         neutron_tunnel_types: {get_param: NeutronTunnelTypes}
+        neutron_tunnel_id_ranges:
+          str_replace:
+            template: "['RANGES']"
+            params:
+              RANGES:
+                list_join:
+                - "','"
+                - {get_param: NeutronTunnelIdRanges}
+        neutron_vni_ranges:
+          str_replace:
+            template: "['RANGES']"
+            params:
+              RANGES:
+                list_join:
+                - "','"
+                - {get_param: NeutronVniRanges}
         neutron_password: {get_param: NeutronPassword}
         neutron_dnsmasq_options: {get_param: NeutronDnsmasqOptions}
         neutron_dsn:
